Fixed floating action button z-index

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -198,6 +198,7 @@ input.input-pic {
     border-radius: 4em;
     color: white;
     text-align: center;
+    z-index: 4;
 }
 
 #floatingActionButton:active{
